export const snapshot = {};

snapshot[`getHostingService 1`] = `
{
  result: "https://github.com/lambdalisue/deno-git-browse",
  url: "ssh://git@github.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 2`] = `
{
  result: "https://github.com/lambdalisue/deno-git-browse/commit/2120c87633f4059656e8aada8eebe62768892b46",
  url: "ssh://git@github.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 3`] = `
{
  result: "https://github.com/lambdalisue/deno-git-browse/tree/v0.1.0/bin",
  url: "ssh://git@github.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 4`] = `
{
  result: "https://github.com/lambdalisue/deno-git-browse/blob/v0.1.0/README.md",
  url: "ssh://git@github.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 5`] = `
{
  result: "https://github.com/lambdalisue/deno-git-browse/blob/v0.1.0/README.md?plain=1#L10",
  url: "ssh://git@github.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 6`] = `
{
  result: "https://github.com/lambdalisue/deno-git-browse/blob/v0.1.0/README.md?plain=1#L10-L20",
  url: "ssh://git@github.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 7`] = `
{
  result: "https://github.com/lambdalisue/deno-git-browse/blob/v0.1.0/bin/browse.ts",
  url: "ssh://git@github.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 8`] = `
{
  result: "https://github.com/lambdalisue/deno-git-browse/blob/v0.1.0/bin/browse.ts?plain=1#L10",
  url: "ssh://git@github.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 9`] = `
{
  result: "https://github.com/lambdalisue/deno-git-browse/blob/v0.1.0/bin/browse.ts?plain=1#L10-L20",
  url: "ssh://git@github.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 10`] = `
{
  result: "https://github.com/lambdalisue/deno-git-browse/pull/1",
  url: "ssh://git@github.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 11`] = `
{
  result: "https://github.com/lambdalisue/deno-git-browse",
  url: "https://github.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 12`] = `
{
  result: "https://github.com/lambdalisue/deno-git-browse/commit/2120c87633f4059656e8aada8eebe62768892b46",
  url: "https://github.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 13`] = `
{
  result: "https://github.com/lambdalisue/deno-git-browse/tree/v0.1.0/bin",
  url: "https://github.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 14`] = `
{
  result: "https://github.com/lambdalisue/deno-git-browse/blob/v0.1.0/README.md",
  url: "https://github.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 15`] = `
{
  result: "https://github.com/lambdalisue/deno-git-browse/blob/v0.1.0/README.md?plain=1#L10",
  url: "https://github.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 16`] = `
{
  result: "https://github.com/lambdalisue/deno-git-browse/blob/v0.1.0/README.md?plain=1#L10-L20",
  url: "https://github.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 17`] = `
{
  result: "https://github.com/lambdalisue/deno-git-browse/blob/v0.1.0/bin/browse.ts",
  url: "https://github.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 18`] = `
{
  result: "https://github.com/lambdalisue/deno-git-browse/blob/v0.1.0/bin/browse.ts?plain=1#L10",
  url: "https://github.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 19`] = `
{
  result: "https://github.com/lambdalisue/deno-git-browse/blob/v0.1.0/bin/browse.ts?plain=1#L10-L20",
  url: "https://github.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 20`] = `
{
  result: "https://github.com/lambdalisue/deno-git-browse/pull/1",
  url: "https://github.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 21`] = `
{
  result: "https://gitlab.com/lambdalisue/deno-git-browse",
  url: "ssh://git@gitlab.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 22`] = `
{
  result: "https://gitlab.com/lambdalisue/deno-git-browse/-/commit/2120c87633f4059656e8aada8eebe62768892b46",
  url: "ssh://git@gitlab.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 23`] = `
{
  result: "https://gitlab.com/lambdalisue/deno-git-browse/-/tree/v0.1.0/bin",
  url: "ssh://git@gitlab.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 24`] = `
{
  result: "https://gitlab.com/lambdalisue/deno-git-browse/-/blob/v0.1.0/README.md",
  url: "ssh://git@gitlab.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 25`] = `
{
  result: "https://gitlab.com/lambdalisue/deno-git-browse/-/blob/v0.1.0/README.md?plain=1#L10",
  url: "ssh://git@gitlab.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 26`] = `
{
  result: "https://gitlab.com/lambdalisue/deno-git-browse/-/blob/v0.1.0/README.md?plain=1#L10-20",
  url: "ssh://git@gitlab.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 27`] = `
{
  result: "https://gitlab.com/lambdalisue/deno-git-browse/-/blob/v0.1.0/bin/browse.ts",
  url: "ssh://git@gitlab.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 28`] = `
{
  result: "https://gitlab.com/lambdalisue/deno-git-browse/-/blob/v0.1.0/bin/browse.ts?plain=1#L10",
  url: "ssh://git@gitlab.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 29`] = `
{
  result: "https://gitlab.com/lambdalisue/deno-git-browse/-/blob/v0.1.0/bin/browse.ts?plain=1#L10-20",
  url: "ssh://git@gitlab.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 30`] = `
{
  result: "https://gitlab.com/lambdalisue/deno-git-browse",
  url: "https://gitlab.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 31`] = `
{
  result: "https://gitlab.com/lambdalisue/deno-git-browse/-/commit/2120c87633f4059656e8aada8eebe62768892b46",
  url: "https://gitlab.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 32`] = `
{
  result: "https://gitlab.com/lambdalisue/deno-git-browse/-/tree/v0.1.0/bin",
  url: "https://gitlab.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 33`] = `
{
  result: "https://gitlab.com/lambdalisue/deno-git-browse/-/blob/v0.1.0/README.md",
  url: "https://gitlab.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 34`] = `
{
  result: "https://gitlab.com/lambdalisue/deno-git-browse/-/blob/v0.1.0/README.md?plain=1#L10",
  url: "https://gitlab.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 35`] = `
{
  result: "https://gitlab.com/lambdalisue/deno-git-browse/-/blob/v0.1.0/README.md?plain=1#L10-20",
  url: "https://gitlab.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 36`] = `
{
  result: "https://gitlab.com/lambdalisue/deno-git-browse/-/blob/v0.1.0/bin/browse.ts",
  url: "https://gitlab.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 37`] = `
{
  result: "https://gitlab.com/lambdalisue/deno-git-browse/-/blob/v0.1.0/bin/browse.ts?plain=1#L10",
  url: "https://gitlab.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService 38`] = `
{
  result: "https://gitlab.com/lambdalisue/deno-git-browse/-/blob/v0.1.0/bin/browse.ts?plain=1#L10-20",
  url: "https://gitlab.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService with alias 1`] = `
{
  result: "https://my-github.com/lambdalisue/deno-git-browse",
  url: "https://my-github.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService with alias 2`] = `
{
  result: "https://my-github.com/lambdalisue/deno-git-browse/commit/2120c87633f4059656e8aada8eebe62768892b46",
  url: "https://my-github.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService with alias 3`] = `
{
  result: "https://my-github.com/lambdalisue/deno-git-browse/tree/v0.1.0/bin",
  url: "https://my-github.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService with alias 4`] = `
{
  result: "https://my-github.com/lambdalisue/deno-git-browse/blob/v0.1.0/README.md",
  url: "https://my-github.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService with alias 5`] = `
{
  result: "https://my-github.com/lambdalisue/deno-git-browse/blob/v0.1.0/README.md?plain=1#L10",
  url: "https://my-github.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService with alias 6`] = `
{
  result: "https://my-github.com/lambdalisue/deno-git-browse/blob/v0.1.0/README.md?plain=1#L10-L20",
  url: "https://my-github.com/lambdalisue/deno-git-browse",
}
`;

snapshot[`getHostingService with alias 7`] = `
{
  result: "https://my-github.com/lambdalisue/deno-git-browse/pull/1",
  url: "https://my-github.com/lambdalisue/deno-git-browse",
}
`;
